Removed useless methods.